@@ -11,11 +11,18 @@ Release Notes - Mesos - Version 0.22.1
                    fetcher doesn't run.
   * [MESOS-2601] - Tasks are not removed after recovery from slave and mesos
                    containerizer
-  * [MESOS-2614] - Update name, hostname, failover_timeout, and webui_url
-                   in master on framework re-registration
   * [MESOS-2643] - Python scheduler driver disables implicit acknowledgments by
                    default.
+  * [MESOS-2668] - Slave fails to recover when there are still processes left in
+                   its cgroup
 
+** Improvement
+  * [MESOS-2461] - Slave should provide details on processes running in its
+                   cgroups
+
+** Task
+  * [MESOS-2614] - Update name, hostname, failover_timeout, and webui_url
+                   in master on framework re-registration
 
 Release Notes - Mesos - Version 0.22.0
 --------------------------------------
